# proxy

./: .bazelrc  BUILD  Makefile.overrides.mk  WORKSPACE  basic-auth.wasm  go.mod  go.sum
extensions/: BUILD
extensions/access_log_policy/: plugin.cc  plugin.h
extensions/attributegen/: BUILD  plugin.cc  plugin.h  plugin_test.cc
extensions/attributes/: BUILD  config.cc  plugin.cc  plugin.h
extensions/common/: BUILD  context.cc  context.h  context.proto  log_info.cc  log_info.h  log_info.proto  mock_log_info.h  node_info_cache.cc  node_info_cache.h  request_info.cc  request_info.h
extensions/metadata_exchange/: BUILD  plugin.cc  plugin.h
extensions/stackdriver/: BUILD  stackdriver.cc  stackdriver.h  stackdriver_plugin_factory.cc
extensions/stackdriver/common/: BUILD  constants.h  context.cc  context.h  context_test.cc  utils.cc  utils.h
extensions/stackdriver/config/: BUILD  stackdriver_plugin_config.proto
extensions/stackdriver/config/v1alpha1/: BUILD  stackdriver_plugin_config.proto  stackdriver_stats_sink_config.proto
extensions/stackdriver/edges/: BUILD  edge_reporter.cc  edge_reporter.h  edge_reporter_test.cc
extensions/stackdriver/log/: BUILD  exporter.cc  logger.cc  logger.h  logger_test.cc
extensions/stackdriver/metric/: BUILD  constants.h  record.cc  record.h  recorder.cc  recorder.h  registry.cc  registry.h  registry_test.cc
extensions/stackdriver/opencensus/: io_opencensus_cpp_null.patch  opencensus.bzl
extensions/stackdriver/stats/: BUILD  registry.h  sink.cc  sink.h  stats.json  statsd
extensions/stats/: BUILD  plugin.cc  plugin.h
extensions/stats/testdata/: client.yaml  server.yaml
extensions/test/: BUILD  mock_request_info.h
include/istio/utils/: attributes_builder.h
quota/: envoy-filter.yaml  istio.yaml  sq-demo.sh  sq-service-config-rollout.json  sq-service-config.json  swagger.yaml
src/api_proxy/service_control/testdata/: report_request_failed.golden
src/envoy/: BUILD
src/envoy/extensions/wasm/: BUILD  context.h  istio_wasm_intrinsics.js  wasm.cc
src/envoy/http/jwt_auth/sample/: BUILD.bazel
src/envoy/utils/: BUILD  utils.cc
src/istio/authn/: BUILD
test/backend/echo/: BUILD.bazel
test/envoye2e/: inventory.go
test/envoye2e/basic_flow/: BUILD.bazel  basic_flow_test.go  basic_xds_test.go
test/envoye2e/basic_tcp_flow/: BUILD.bazel
test/envoye2e/driver/: envoy.go  fileserver.go  grpc.go  scenario.go  stackdriver.go  tcp.go
test/envoye2e/env/: BUILD.bazel  envoy_conf.go  inventory.go  ports.go
test/envoye2e/http_metadata_exchange/: exchange_xds_test.go
test/envoye2e/stackdriver_plugin/: BUILD.bazel  stackdriver_plugin_test.go  stackdriver_xds_test.go
test/envoye2e/stackdriver_plugin/fake_stackdriver/: BUILD.bazel  fake_stackdriver.go
test/envoye2e/stats_plugin/: server1.yaml.tmpl  server2.yaml.tmpl  stats_plugin_test.go  stats_remote_load_test.go  stats_test.go  stats_xds_test.go
test/envoye2e/tcp_metadata_exchange/: BUILD.bazel
test/integration/: istio_http_integration_test.cc  istio_http_integration_test_with_envoy_jwt_filter.cc
testdata/bootstrap/: server.yaml.tmpl
testdata/cluster/: server.yaml.tmpl  server_new.yaml.tmpl  wasm_file_server.yaml.tmpl
testdata/filters/: mx_remote_load_configuration.yaml.tmpl  stats_inbound.yaml.tmpl  stats_outbound.yaml.tmpl  stats_remote_load_configuration.yaml.tmpl
testdata/listener/: client.yaml.tmpl  server.yaml.tmpl
(+29 files in other folders)
