load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["doc.go"],
    importpath = "istio.io/proxy/test/envoye2e/tcp_metadata_exchange",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["tcp_metadata_exchange_test.go"],
    embed = [":go_default_library"],
    deps = ["//test/envoye2e/env:go_default_library"],
)
