load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "data.go",
        "fake_stackdriver.go",
    ],
    importpath = "istio.io/proxy/test/envoye2e/stackdriver_plugin/fake_stackdriver",
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/api:metric_go_proto",
        "@go_googleapis//google/api:monitoredres_go_proto",
        "@go_googleapis//google/logging/v2:logging_go_proto",
        "@go_googleapis//google/monitoring/v3:monitoring_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
