load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fake_issuer.go"],
    importpath = "istio.io/proxy/src/envoy/http/jwt_auth/sample",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "sample",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
